<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>laue_overlay_editor</class>
 <widget class="QWidget" name="laue_overlay_editor">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>741</width>
    <height>790</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>0</width>
    <height>790</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Edit Overlay</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QDoubleSpinBox:disabled {background-color: LightGray;}
</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="1" column="0">
    <widget class="QLabel" name="min_energy_label">
     <property name="text">
      <string>Min Energy:</string>
     </property>
     <property name="buddy">
      <cstring>min_energy</cstring>
     </property>
    </widget>
   </item>
   <item row="7" column="0" colspan="2">
    <widget class="QGroupBox" name="labelsGroup">
     <property name="title">
      <string>Labels</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="3">
       <widget class="ScientificDoubleSpinBox" name="label_offset_x">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="minimum">
         <double>-10000.000000000000000</double>
        </property>
        <property name="maximum">
         <double>10000.000000000000000</double>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="label_type"/>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label_offset_x_label">
        <property name="text">
         <string>Offset X:</string>
        </property>
        <property name="buddy">
         <cstring>label_offset_x</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_type_label">
        <property name="text">
         <string>Type:</string>
        </property>
        <property name="buddy">
         <cstring>label_type</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="4">
       <widget class="QLabel" name="label_offset_y_label">
        <property name="text">
         <string>Offset Y:</string>
        </property>
        <property name="buddy">
         <cstring>label_offset_y</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="5">
       <widget class="ScientificDoubleSpinBox" name="label_offset_y">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="minimum">
         <double>-10000.000000000000000</double>
        </property>
        <property name="maximum">
         <double>10000.000000000000000</double>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="max_energy_label">
     <property name="text">
      <string>Max Energy:</string>
     </property>
     <property name="buddy">
      <cstring>max_energy</cstring>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="ScientificDoubleSpinBox" name="max_energy">
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
     <property name="keyboardTracking">
      <bool>false</bool>
     </property>
     <property name="decimals">
      <number>8</number>
     </property>
     <property name="maximum">
      <double>100000.000000000000000</double>
     </property>
     <property name="value">
      <double>35.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="6" column="0" colspan="2">
    <widget class="QGroupBox" name="sample_frame_group">
     <property name="title">
      <string>Sample Frame</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="sample_orientation_label">
        <property name="text">
         <string>Orientation:</string>
        </property>
        <property name="buddy">
         <cstring>sample_orientation_0</cstring>
        </property>
       </widget>
      </item>
      <item>
       <widget class="ScientificDoubleSpinBox" name="sample_orientation_0">
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="minimum">
         <double>-1000000.000000000000000</double>
        </property>
        <property name="maximum">
         <double>1000000.000000000000000</double>
        </property>
       </widget>
      </item>
      <item>
       <widget class="ScientificDoubleSpinBox" name="sample_orientation_1">
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="minimum">
         <double>-1000000.000000000000000</double>
        </property>
        <property name="maximum">
         <double>1000000.000000000000000</double>
        </property>
       </widget>
      </item>
      <item>
       <widget class="ScientificDoubleSpinBox" name="sample_orientation_2">
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="minimum">
         <double>-1000000.000000000000000</double>
        </property>
        <property name="maximum">
         <double>1000000.000000000000000</double>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="8" column="0" colspan="2">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="1" column="1">
    <widget class="ScientificDoubleSpinBox" name="min_energy">
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
     <property name="keyboardTracking">
      <bool>false</bool>
     </property>
     <property name="decimals">
      <number>8</number>
     </property>
     <property name="maximum">
      <double>100000.000000000000000</double>
     </property>
     <property name="value">
      <double>5.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="5" column="0" colspan="2">
    <layout class="QVBoxLayout" name="crystal_editor_layout"/>
   </item>
   <item row="3" column="0" colspan="2">
    <widget class="QGroupBox" name="ranges_group_box">
     <property name="title">
      <string>Widths</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_4">
      <item row="1" column="0">
       <widget class="QCheckBox" name="enable_widths">
        <property name="text">
         <string>Enable Widths</string>
        </property>
       </widget>
      </item>
      <item row="3" column="3">
       <widget class="ScientificDoubleSpinBox" name="eta_width">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="suffix">
         <string>°</string>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="maximum">
         <double>360.000000000000000</double>
        </property>
        <property name="value">
         <double>5.000000000000000</double>
        </property>
       </widget>
      </item>
      <item row="1" column="3">
       <widget class="ScientificDoubleSpinBox" name="tth_width">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="suffix">
         <string>°</string>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="maximum">
         <double>360.000000000000000</double>
        </property>
        <property name="value">
         <double>5.000000000000000</double>
        </property>
       </widget>
      </item>
      <item row="3" column="2">
       <widget class="QLabel" name="eta_width_label">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="text">
         <string>η</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="buddy">
         <cstring>eta_width</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="2">
       <widget class="QLabel" name="tth_width_label">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="text">
         <string>2θ</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="buddy">
         <cstring>tth_width</cstring>
        </property>
       </widget>
      </item>
      <item row="3" column="0">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="width_shape_label">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="text">
           <string>Width Shape:</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
          </property>
          <property name="buddy">
           <cstring>width_shape</cstring>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QComboBox" name="width_shape">
          <property name="enabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item row="0" column="0">
    <widget class="QLabel" name="xray_source_label">
     <property name="text">
      <string>X-Ray Source:</string>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QComboBox" name="xray_source"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ScientificDoubleSpinBox</class>
   <extends>QDoubleSpinBox</extends>
   <header>scientificspinbox.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>xray_source</tabstop>
  <tabstop>min_energy</tabstop>
  <tabstop>max_energy</tabstop>
  <tabstop>enable_widths</tabstop>
  <tabstop>tth_width</tabstop>
  <tabstop>width_shape</tabstop>
  <tabstop>eta_width</tabstop>
  <tabstop>sample_orientation_0</tabstop>
  <tabstop>sample_orientation_1</tabstop>
  <tabstop>sample_orientation_2</tabstop>
  <tabstop>label_type</tabstop>
  <tabstop>label_offset_x</tabstop>
  <tabstop>label_offset_y</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
